@@ -5,9 +5,10 @@
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
 TEMPLATES_MANAGER_STYLES=Template Manager: Styles
-TEMPLATES_MANAGER_TEMPLATES=Manager Manager: Templates
+TEMPLATES_MANAGER_TEMPLATES=Template Manager: Templates
 
 TEMPLATES_TOOLBAR_CLONE=Clone
+TEMPLATES_TOOLBAR_SAVE_COPY=Save a Copy
 TEMPLATES_TOOLBAR_SET_HOME=Make Default
 TEMPLATES_HEADING_ASSIGNED=Assigned
 TEMPLATES_HEADING_HOME=Home
